# ai-reliability-standards

./: .gitignore  CONTRIBUTORS.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/: .codespellignorewords
.github/workflows/: publish-standards.yml  publish-wormhole.yml
docs/: getting-started.md  index.md  principles.md
docs/appendix/: glossary.md  metrics-framework.md
docs/pillars/: cognitive-reliability.md  operational-excellence.md  quality-lifecycle.md  resilient-architecture.md  security.md
docs/stylesheets/: extra.css
k8s/: standards-page-deployment.yaml  standards-page-ingress-http.yaml  standards-page-ingress.yaml  standards-page-service.yaml
stylesheets/: extra.css
